--- a/Getresume.AI/index.html
+++ b/Getresume.AI/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js" ></script>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+  </body> 
 </html>
